# NGKsMailcpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  PROJECT_TREE_CLEAN.txt  README.md  Universal Agent Ruleset.txt
src/: CMakeLists.txt
src/app/: App.cpp  App.h  BuildInfo.h  main.cpp
src/auth/: AuthDriver.hpp  AuthResult.hpp
src/core/auth/: OAuthStore.cpp  OAuthStore.h
src/core/bus/: Commands.h  EventBus.cpp  EventBus.h
src/core/config/: SettingsStore.cpp  SettingsStore.h
src/core/crypto/: Keychain.cpp  Keychain.h
src/core/logging/: AuditLog.cpp  AuditLog.h  Log.cpp  Log.h
src/core/mail/mime/: MimeParser.cpp  MimeParser.h
src/core/mail/providers/: Provider.h  ProviderRegistry.cpp  ProviderRegistry.h
src/core/mail/sync/: JobQueue.cpp  JobQueue.h  SyncEngine.cpp  SyncEngine.h
src/core/mail/types/: Address.h  Flags.h  MailIds.h  Mime.h
src/core/oauth/: OAuthBroker.cpp  OAuthBroker.h
src/core/storage/: Db.cpp  Db.h  Reindexer.cpp  Reindexer.h  Schema.cpp  Schema.h
src/db/: BasicCredentialStore.cpp  BasicCredentialStore.hpp  TokenStore.cpp  TokenStore.hpp
src/platform/common/: Paths.cpp  Paths.h  Time.cpp  Time.h
src/platform/win/: WinAppUserDataPaths.cpp  WinKeychain.cpp
src/providers/core/: ProviderProfile.hpp  ProviderRegistry.cpp  ProviderRegistry.hpp  ProviderTypes.hpp
src/providers/generic_imap/: GenericImapAuthDriver.cpp  GenericImapAuthDriver.hpp  GenericImapProfile.cpp  GenericImapProfile.hpp  generic_imap_env.hpp
src/providers/gmail/: GmailAuthDriver.cpp  GmailAuthDriver.hpp  GmailProfile.cpp  GmailProfile.hpp  gmail_env.hpp
src/providers/icloud/: ICloudAuthDriver.cpp  ICloudAuthDriver.hpp  ICloudProfile.cpp  ICloudProfile.hpp  icloud_env.hpp
src/providers/ms_graph/: MsGraphAuthDriver.cpp  MsGraphAuthDriver.hpp  MsGraphProfile.cpp  MsGraphProfile.hpp  ms_graph_env.hpp
src/providers/yahoo/: YahooAuthDriver.cpp  YahooAuthDriver.hpp  YahooProfile.cpp  YahooProfile.hpp  yahoo_env.hpp
src/providers/yahoo_app_password/: YahooAppPasswordAuthDriver.cpp  YahooAppPasswordAuthDriver.hpp  YahooAppPasswordProfile.cpp  YahooAppPasswordProfile.hpp  yahoo_env.hpp
src/resolve/: ProviderDiscovery.cpp  ProviderDiscovery.hpp
src/ui/: MainWindow.cpp  MainWindow.h
src/ui/compose/: ComposeDispatcher.hpp  ComposeWindow.cpp  ComposeWindow.hpp
src/ui/models/: AccountTreeModel.cpp  AccountTreeModel.h  AccountTreeModel.hpp  FolderTreeModel.cpp  FolderTreeModel.h  FolderTreeModel.hpp  MailUiService.hpp  MessageListModel.cpp  MessageListModel.h  MessageListModel.hpp  ThreadModel.cpp  ThreadModel.h
src/ui/preview/: MimePreviewAdapter.hpp
src/ui/services/: ProductionMailUiService.cpp  ProductionMailUiService.hpp
src/ui/shell/: ComposeWindow.cpp  ComposeWindow.h  MessageList.cpp  MessageList.h  NavigationPane.cpp  NavigationPane.h  ReadingPane.cpp  ReadingPane.h
(+40 files in other folders)
